Update index.html To Add SEO Tags
SEO tags added to site html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-Width and Height Iframe</title>
+    <!-- SEO Meta Tags -->
+    <title>UIF Alumni Network</title>
+    <meta name="description" content="Connect with fellow alumni, share experiences, and explore opportunities with the Alumni Network. Join our community today!">
+    <meta name="keywords" content="alumni, network, community, education, connections, opportunities,UIF,UIF Alumni,University Innovation Fellows,UIF Network">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Alumni Network Team">
+
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="Alumni Network">
+    <meta property="og:description" content="Connect with fellow UIF alumni, share experiences, and explore opportunities with the Alumni Network.">
+    <meta property="og:image" content="https://example.com/path-to-your-image.jpg">
+    <meta property="og:url" content="https://uifnetwork.org">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="UIF Alumni Network">
+    <meta name="twitter:description" content="Connect with fellow alumni, share experiences, and explore opportunities with the Alumni Network.">
+    <meta name="twitter:image" content="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fee90efb54bd21b2eb02d2cf66c18cf93.cdn.bubble.io%2Ff1706378272061x527965993032920100%2FUIF-Fall-2016.jpg?w=2048&h=582&auto=compress&fit=crop&dpr=2&quot
+    ">
+    <meta name="twitter:url" content="https://uifnetwork.org"">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fee90efb54bd21b2eb02d2cf66c18cf93.cdn.bubble.io%2Ff1706378272061x527965993032920100%2FUIF-Fall-2016.jpg?w=2048&h=582&auto=compress&fit=crop&dpr=2&quot
+    ">
     <style>
         html, body {
             margin: 0;
@@ -18,6 +40,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://catalist.network/site?space=uifnetwork" title="Full-Width and Height Iframe of UIF Network Catalist Site"></iframe>
+    <iframe src="https://catalist.network/site?space=uifnetwork" title="UIF Alumni Network | Catalist Site"></iframe>
 </body>
 </html>
