--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <meta name="twitter:url" content="https://uifnetwork.org"">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fee90efb54bd21b2eb02d2cf66c18cf93.cdn.bubble.io%2Ff1706378272061x527965993032920100%2FUIF-Fall-2016.jpg?w=2048&h=582&auto=compress&fit=crop&dpr=2&quot
-    ">
+    <link rel="icon" type="image/png" href="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fee90efb54bd21b2eb02d2cf66c18cf93.cdn.bubble.io%2Ff1706502631249x999678374324109600%2Fuif%2520logo%2520black.png?w=384&h=384&auto=compress&dpr=2&fit=max">
     <style>
         html, body {
             margin: 0;
